Add MongoDB persistence (survives restarts)

--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["restaurant", "ordering", "qr-code", "kitchen-display"],
+  "keywords": [
+    "restaurant",
+    "ordering",
+    "qr-code",
+    "kitchen-display"
+  ],
   "author": "Karthikeyan",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "mongoose": "^9.2.1"
   }
 }
